[package]
name = "gnostr"
version = "1893.935010.246953"
edition = "2021"
description = "gnostr:a git+nostr workflow utility"
authors = [
    "gnostr <admin@gnostr.org>",
    "0xtr <oxtrr@protonmail.com>",
    "TODO <add_more@gnostr.org>",
]
readme = "README.md"
homepage = "https://github.com/gnostr-org/gnostr"
repository = "https://github.com/gnostr-org/gnostr.git"
license = "MIT"
keywords = ["gnostr", "tool", "nostr"]
categories = ["command-line-utilities"]
build = "build.rs"
default-run = "gnostr"

exclude = [
    ".git/",
    ".github/",
    ".gnostr",
    ".gnostr/.git",
    "**.gif",
    "**.md",
    "*assets/",
    "*benches/",
    "*ci/",
    "*crawler/",
    "*docs/",
    "*examples/",
    "*target/",
    "*vendor/",
    #"config/",##for app
    "git2-testing",
    #"tests/",
    "org",
    "proxy",
    "xcode",
    "xq",
    #"test_utils",
]

[workspace]
members = [
    ".",
    # Root crate
    "asyncgit",

    "filetreelist",
    "gh",
    "git2-hooks",
    "git2-testing",
    "grammar",
    "invalidstring",
    "legit",
    "qr",
    "relay",
    "relay/extensions",
    "scopetime",
]

[workspace.dependencies]
aes = "0.8"
num_cpus = "1.16.0"
	anyhow = "1.0.100"
	arc-swap = "1.8.0"
	askama = { version = "0.12.1", default-features = false }
	assert_cmd = "2.0.17"
	async-trait = "0.1.89"
	axum = { version = "0.7", features = ["query", "tokio", "http1", "ws"] }
	axum-core = "0.4.5"
	base64 = "0.22.1"
	bech32 = "0.11"
	bytes = "1.11.0"
	chrono = "0.4.43"
	clap = { version = "4.5.55", features = ["std", "cargo", "derive", "help", "usage", "env"] }
	constant_time_eq = "0.1"
	crossbeam-channel = "0.5.15"
	crossterm = "0.28.1"
	dialoguer = "0.10.4"
	directories = "5.0.1"
	env_logger = "0.11"
	expectrl = "0.8.0"
	flate2 = "1.1.8"
	futures = "0.3.31"
	futures-util = "0.3.31"
	git2 = "^0.20"
	handlebars = { version = "6.3.2" }
	httparse = "1.10.1"
	humantime = "2.1.3"
	itertools = "0.14.0"
	kanal = "0.1.1"
	lazy_static = "1.5.0"
	libp2p = { version = "0.54.1", features = ["async-std", "cbor", "dns", "gossipsub", "identify", "kad", "macros", "mdns", "noise", "ping", "quic", "relay", "rendezvous", "request-response", "tcp", "tokio", "yamux", "websocket"] }
	log = "0.4.29"
	md5 = "0.7.0"
	moka = { version = "0.12.13", features = ["future"] }
	nostr = "0.37.0"
	nostr-sdk = { version = "0.37.0", features = ["all-nips"] }
	notify = "7.0.0"
	once_cell = "1.21.3"
	parking_lot = "0.12.3"
	predicates = "3.1.3"
	pretty_env_logger = { version = "0.5.0" }
	proc-macro2 = "1.0"
	quote = "1.0"
	regex = "1.11"
	reqwest = { version = "0.12.28", features = ["blocking", "json"] }
	rkyv = "0.8.14"
	rocksdb = { version = "0.22", default-features = false, features = ["snappy"] }
	ron = "0.8.1"
	russh = { version = "0.37.1", features = ["openssl"] }
	russh-keys = "0.37.1"
	rust-ini = "0.21.3"
	scopetime = { package = "gnostr-scopetime", path = "./scopetime" }
	scrypt = "0.11.0"
	secp256k1 = { version = "0.29.1", features = ["hashes", "global-context", "rand-std", "serde"] }
	serde = { version = "1.0.228", features = ["derive", "rc"] }
	serde_json = "1.0.146"
	serde_yaml = "0.9.34"
	service-manager = { version = "0.10.0", features = ["clap"] }
	sha2 = "0.10.9"
	sha256 = "1.6.0"
	shellexpand = "3.1.1"
	shellwords = "1.1.0"
	simdutf8 = "0.1.5"
	simple_logger = "4.3.3"
	sled = "0.34.7"
	ssh-key = { version = "0.6.7", features = ["crypto", "encryption"] }
	strip-ansi-escapes = "0.2.1"
	struct-patch = "0.4.1"
	syn = "2.0"
	syntect = { version = "5.3.0", default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "html", "regex-fancy"] }
	tar = { version = "0.4.44", default-features = false }
	tempfile = "3.24.0"
	tera = "1.20.1"
	terminal_size = "0.3.0"
	textwrap = "0.16.2"
	thiserror = "1.0.69"
	thread-priority = "1.2.0"
	time = { version = "0.3.46", features = ["macros", "formatting"] }
	timeago = { version = "0.4.2", default-features = false }
	tiny-hderive = "0.3.0"
	tiny_http = { version = "0.12" }
	tokio = { version = "1.49.0", features = ["full", "tracing", "sync", "macros", "rt-multi-thread"] }
	tokio-stream = "0.1.18"
	tokio-tungstenite = { version = "0.28.0", features = ["connect", "handshake", "rustls-tls-webpki-roots", "native-tls"] }
	tokio-util = { version = "0.7.18", features = ["io"] }
	toml = "0.8.20"
	tower = { version = "0.5.3" }
	tower-http = { version = "0.6.8", features = ["cors", "timeout", "fs", "trace"] }
	tower-layer = "0.3.3"
	tower-service = "0.3.3"
	tracing = "0.1.44"
	tracing-core = "0.1.36"
	tracing-subscriber = { version = "0.3.22", default-features = false, features = ["env-filter", "smallvec", "parking_lot", "fmt"] }
	tree-sitter = "0.23.2"
	tree-sitter-highlight = "0.23.2"
	tree-sitter-language = "0.1.6"
	trust-dns-resolver = "0.23.2"
	tui-input = "0.10.1"
	tui-textarea = "0.6.1"
	two-face = { version = "0.4.5", default-features = false }
	unicode-normalization = "0.1.25"
	unicode-segmentation = "1.12.0"
	unicode-truncate = "1.1.0"
	unicode-width = "0.1.14"
	unix_mode = "0.1.4"
	ureq = { version = "2.12.1", features = ["json", "charset"] }
	url = "2.5.8"
	urlencoding = "2.1.3"
	uuid = { version = "1.20.0", features = ["v4"] }
	v_htmlescape = { version = "0.15.8", features = ["bytes-buf"] }
	walkdir = "2.5.0"
	warp = { version = "0.3" }
	webbrowser = { version = "0.8" }
	which = "6.0.3"
	xxhash-rust = { version = "0.8.15", features = ["const_xxh3"] }
	yoke = { version = "0.7.5", features = ["derive"] }
	zeroize = "1.8.2"

[lib]
name = "gnostr"
path = "src/lib/mod.rs"

[[bin]]
name = "gnostr-crawler-service"
path = "src/bin/gnostr-crawler-service.rs"

[[bin]]
name = "git-remote-nostr"
path = "src/bin/git-remote-nostr/main.rs"

[[bin]]
name = "git-remote-gnostr"
path = "src/bin/git-remote-gnostr.rs"



[[bin]]
name = "gnostr-gnit"
path = "src/bin/gnostr-gnit.rs"
required-features = ["gnostr-web"]

[[bin]]
name = "gnostr-web"
path = "src/bin/gnostr-web.rs"
required-features = ["gnostr-web"]

[[bin]]
name = "git-remote-gnostr-node"
path = "src/lib/node/remote_helper.rs"

[[bin]]
name = "gnostr-shell"
path = "src/lib/node/git_shell.rs"

[features]
default = ["ghemoji", "regex-fancy", "trace-libgit"]
expensive_tests = [] #nostr
ghemoji = ["dep:gh-emoji"]
gnostr-web = [
    "askama",
    "httparse",
    "flate2",
    "moka",
    "proc-macro2",
    "rocksdb",
    "rust-ini",
    "tar",
    "timeago",
    "tokio-stream",
    "tower-layer",
    "tower-service",
    "actix-cors",
    "actix-http",
    "actix-web",
    "actix-web-actors",
    "rocket",
    "gnostr-asyncgit/gnostr_web",
    "handlebars",
    "warp",
    "tiny_http",
    "webbrowser",
    "pretty_env_logger",
]
# regex-* features are mutually exclusive.
regex-fancy = ["syntect/regex-fancy", "two-face/syntect-fancy"]
regex-onig = ["syntect/regex-onig", "two-face/syntect-onig"]
timing = ["scopetime/enabled"]
trace-libgit = ["gnostr-asyncgit/trace-libgit"]
vendor-openssl = ["gnostr-asyncgit/vendor-openssl", "openssl/vendored"]
nightly = []
coverage = []
relay-search = ["nostr-db/search", "gnostr-relay/search"]

[dependencies]

## relay
actix-cors = { version = "0.7.0", optional = true }
actix-http = { version = "3.9.0", optional = true }
actix-web = { version = "4.9.0", optional = true }
actix-web-actors = { version = "4.3.1", optional = true }
## TYPES DEPS
aes = { workspace = true }
ansi_term = "0.12"

anstream = "0.6.4"
#tracing-subscriber = "0.3.18"

anyhow = "1.0.75"
## web

arc-swap = "1.7"
argparse    = "0.2.2"
ascii = "1.1.0"

askama = { version = "0.12.0", default-features = false, optional = true }
assert_cmd = "2.0.17"
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1.73"

##nostr
auth-git2 = "^0.5"

axum = { version = "0.7", features = [
  "query",
  "tokio",
  "http1",
  "macros",
  "ws",
] }
axum-core = "0.4.5"
axum-template = { version = "0.3.0", features = ["tera"] }
backtrace = "0.3"
#url = "2.5"
#zeroize = "1.7"

## TYPES DEPS
base64 = { workspace = true }
bech32 = { workspace = true }

bincode = "1.3.1"
bip39 = { package = "tiny-bip39", version = "2.0.0" }
## bip39 = "2.2.0"
bitcoin_hashes = "0.14.0"
bitflags = "2.9.0"
block-padding = "0.3.3"
bugreport = "0.5"
bwrap = { version = "1.3", features = ["use_std"] }
bytes = "1.7.1"
bytesize = { version = "1.3", default-features = false }
bytestring = "1.3.1"
cbc = { version = "0.1", features = [ "std" ] }
#cc = "1.0.106"
chacha20 = "0.9"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5.34", features = ["derive", "env", "cargo"] } ## align with asyncgit version
clean-path = "0.2.1"
# clipboard = "0.5.0" # unused - using xclip/xsel/wl-copy via command line instead

colored = "2.0.0"
colorful = "0.2"
comrak = "0.28.0"
config = { version = "0.14.0", features = [
    "toml",
    "json",
], default-features = false }
console = "0.15.7"

##comrak = { version = "0.28.0", default-features = false }
const-hex = "1.12"
const_format = "0.2"
constant_time_eq = { workspace = true}
#chacha20poly1305 = "0.10"
core-net = "0.1"
crossbeam-channel = "0.5"
crossterm = { version = "0.28.0", features = ["event-stream", "serde"] }
csv = "1.3.0"
ctrlc = { version = "3.4.7", features = ["termination"] }

derive_more = "0.99"
dialoguer = "0.10.4"
directories = "5.0.1"
dirs = "5.0.1"
dns-lookup = "2.0.4"
duration-str = { version = "0.11.2", default-features = false }
easy-cast = "0.5"
env_logger = "0.11"
expectrl = "0.8.0"
filetreelist = { version = "1894.934224.276199", package = "gnostr-filetreelist", path = "filetreelist" }
flate2 = { version = "1.0", optional = true }

flume = "0.10"
futures = "0.3.28"
futures-core = { version = "0.3", optional = false, default-features = false }
futures-timer = "3.0"
futures-util = "0.3"
fuzzy-matcher = "0.3"
getopts = "0.2.21"
gh-emoji = { version = "1.0", optional = true }
git2 = "^0.20" ## asyncgit ^0.19

gix = { version = "0.66", default-features = false, features = [
  "fast-sha1",
  "tracing",
  "parallel",
  "blob-diff",
  "revision",
] }
globset = "0.4"

##gitui
#anyhow = "1.0"
gnostr-asyncgit = { version = "1893.935010.246953", default-features = false, path = "asyncgit" }
#gnostr-crawler = { version = "1906.925289.572444", path = "crawler" }
#gnostr-grammar = { version = "1894.934224.276199", path = "grammar" }
gnostr-legit = { version = "1894.934224.276199", path = "legit" }
#gnostr-query = { version = "1894.934224.276199", path = "query" }
gnostr-relay = { version = "1894.934224.276199", path = "relay", default-features = false }
gnostr_qr = { version = "1894.934224.276199", path = "qr" }
handlebars = { workspace = true, optional = true }
hex = "0.4.3"
hkdf = "0.12"
hmac = "0.12"
home = "0.5.5"

#hex = "0.4"
hostname = "0.3.1"
http = "1.1"

httparse = { version = "1.7", optional = true }
humantime = "2.1"
indexmap = "2"
indicatif = "0.17.7"
itertools = "0.13"
k256 = { version = "0.13", features = [ "schnorr", "ecdh" ] }
kanal = "0.1.0-pre8"
#indicatif = "0.17.7"
lazy_static = "1.4"
libp2p = { version = "0.54.1", features = [
  "async-std",
  "cbor",
  "dns",
  "gossipsub",
  "identify",
  "kad",
  "macros",
  "mdns",
  "noise",
  "ping",
  "quic",
  "relay",
  "rendezvous",
  "request-response",
  "tcp",
  "tokio",
  "yamux",
  "websocket"
] }
libp2p-quic = { version = "^0.12", features = ["async-std"] }
libp2p-tls = "^0.6"
#hex = "0.4"
#lazy_static = "1.4"
lightning-invoice = "0.33.2"
#lightning-invoice = { path = "../lightning/lightning-invoice", version = "0.31.0-beta" }
#lightning = { version = "0.0.123-beta", path = "../lightning/lightning" }
linkify = "0.10"

log = "0.4.24"

md5 = "0.7"
metrics = "0.23.0"
moka = { version = "0.12.0", features = ["future"], optional = true }
nostr = "0.29"

## nostr deps
## primary 0.34.0/1
nostr-database_0_34_0 = { package = "nostr-database", version = "0.34.0" }

## relay
nostr-db = { version = "0.4.5" }

nostr-sdk_0_19_1 = { package = "nostr-sdk", version = "0.19.1" }

## TODO remove and upgrade
nostr-sdk_0_32_0 = { package = "nostr-sdk", version = "0.32.0" }

## aligned with ./crawler
nostr-sdk_0_34_0 = { package = "nostr-sdk", version = "0.34.0" }

## REF: https://docs.rs/nostr-sdk/0.37.0/nostr_sdk/
nostr-sdk_0_37_0 = { package = "nostr-sdk", version = "0.37.0" }
nostr-signer_0_34_0 = { package = "nostr-signer", version = "0.34.0" }
nostr-sqlite_0_34_0 = { package = "nostr-sqlite", version = "0.34.0" }
## TODO remove and upgrade
nostr_0_32_0 = { package = "nostr", version = "0.32.0" }
nostr_0_34_1 = { package = "nostr", version = "0.34.1" }
nostr_0_37_0 = { package = "nostr", version = "0.37.0" }

notify = "6.1.1"
notify-debouncer-mini = "0.4"
num-bigint = "0.4.6"
num_cpus = { workspace = true }

#num_cpus = "1.16.0"
once_cell = "1.21.3"
openssl = { version = "0.10" }  # use vendor-openssl feature to enable vendored builds
pad = "0.1.6"
parking_lot = "0.12.3"
#once_cell = "1"
# pin until upgrading this does not introduce a duplicate dependency
parking_lot_core = "=0.9.9"
passwords = "3.1.13"
#tree-sitter-highlight = "0.23"
path-clean = "1.0.1"
#num_cpus = "1"
pbkdf2 = { version = "0.12", default-features = false, features = [ "hmac", "sha2", "std" ] }
pretty_env_logger = { workspace = true, optional = true }
proc-macro2 = { version = "1.0", optional = true }
proctitle = "0.1.1"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
ratatui = { version = "0.28", default-features = false, features = [
    'crossterm',
    'serde',
] }
rayon-core = "1.12"
rcgen = "^0.13"
regex = "1.11.1"
#regex = "1.10.2"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
rkyv = "0.8"
rocket = { version = "0.5.1", optional = true }

rocksdb = { version = "0.22", default-features = false, features = ["snappy"], optional = true }
ron = "0.8"
rpassword = "7.2"
russh = { version = "0.37.1", features = ["openssl"] }
russh-keys = "0.37.1"
rust-crypto = "0.2.36"
rust-ini = { version = "0.21.1", optional = true }
scopeguard = "1.2"
scopetime = { package = "gnostr-scopetime", path = "./scopetime", version = "1894.934224.276199" }
scrypt = { workspace = true }
#rand = "0.8"
#rand_core = "0.6"
#regex = "1.10"
#scrypt = "0.11"
secp256k1 = { workspace = true }
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = "1.0.117"
serde_yaml = "0.9.27"
service-manager = { version = "0.10.0", features = ["clap"] }
sha2 = "0.10.8"
sha256 = "1.5.0"
shellexpand = "3.1"
shellwords = "1.1.0"

simdutf8 = "0.1.5"
simple_logger = "4.1"
sled = "0.34"
#serde = { version = "1.0", features = [ "derive" ] }
#serde_json = "1.0"
#sha2 = "0.10"
speedy = { version = "0.8.7", optional = true }
ssh-key = { version = "0.6.2", features = ["ed25519"] }
strip-ansi-escapes = "0.2.0"
struct-patch = "0.4"
syntect = { version = "5.2", default-features = false, features = [
    "parsing",
    "default-syntaxes",
    "default-themes",
    "html",
] }
tar = { version = "0.4", default-features = false, optional = true }
tempfile = "3.5.0"
tera = "1.19"
terminal_size = "0.3.0"
# causes cyclic error test_utils = { path = "test_utils" }
textwrap = "0.16.0"
#serde = { version = "1.0.209", features = ["derive"] }
#serde_json = "1.0.127"
thiserror = "1.0.63"
#thiserror = "1.0"
thread-priority = { workspace = true }
#thiserror = "1"
time = { version = "0.3.41", features = ["macros", "formatting"] }

timeago = { version = "0.4.2", default-features = false, optional = true }
tiny-hderive = "0.3.0"
tiny_http = { workspace = true, optional = true }
tokio = { version = "1.33.0", features = ["full", "tracing"] }

##tokio = { version = "1.19", features = ["full", "tracing"] }
tokio-stream = { version = "0.1", optional = true }
tokio-tungstenite = { version = "0.28.0", features = [ "connect", "handshake", "rustls-tls-webpki-roots", "native-tls" ] }
tokio-util = { version = "0.7.17", features = ["io"] }

tower = { workspace = true } ##{ version = "0.5.3", optional = true }
tower-http = { workspace = true } ##{ version = "0.6", features = ["cors", "timeout"], optional = true }

toml = "0.8"
##tokio-util = { version = "0.7.10", features = ["io"] }

tower-layer = { version = "0.3", optional = true }
tower-service = { version = "0.3", optional = true }
tracing = "0.1.41"
#tracing = { version = "0.1.38", default-features = false }
tracing-core = "0.1.33"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tree-sitter = "=0.20.10"
tree-sitter-highlight = "^0.20"
tree-sitter-language = "0.1.6"
#tree-sitter-highlight = "0.26.3"
#tree-sitter-language = "0.1.6"
#tree-sitter-language = "0.1"
trust-dns-resolver = "0.23" # Use the latest version
tui-input = "0.10.1"
tui-textarea = "0.6"
#tungstenite = { version = "0.28", features = [ "rustls-tls-webpki-roots" ] }
two-face = { version = "0.4.0", default-features = false }
unicode-normalization = "0.1"
unicode-segmentation = "1.12"
unicode-truncate = "1.0"
unicode-width = "0.1.12"
unix_mode = "0.1"
ureq = { version = "2", features = ["json", "charset"] }
url = "2.2.2"
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["v4"] }
v_htmlescape = { version = "0.15", features = ["bytes-buf"] }
walkdir = "2.4"
warp = { workspace = true, optional = true }
webbrowser = { workspace = true, optional = true }
which = "6.0"

xxhash-rust = { version = "0.8.12", features = ["const_xxh3"] }
yoke = { version = "0.7.1", features = ["derive"] }
zeroize = "1.6.0"

[target.'cfg(not(windows))'.dependencies]
sd-notify = "0.4.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "handleapi", "processthreadsapi", "errhandlingapi"] }

# If sccache is using 0.48, add this too
windows-sys_048 = { package = "windows-sys", version = "0.48", features = ["Win32_System_Threading", "Win32_Foundation"] }

# Patch for version 0.52
windows-sys_052 = { package = "windows-sys", version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation"] }

[build-dependencies]
anyhow = { workspace = true }
cc = "1.2.54"
chrono = { workspace = true, features = ["clock"] }
heck = "0.5.0"
hex = "0.4.3"
prettyplease = "0.2.37"
proc-macro2 = { workspace = true }
quote = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
rsass = "0.28.10"
sccache = "0.13.0"
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
syn = { workspace = true }
threadpool = "1.8.1"
toml = { workspace = true }

[dev-dependencies]
actix-rt = "2.11.0"
actix-test = "0.1.5"
anyhow = { workspace = true }
assert_cmd = { workspace = true }
comma = "1.0.0"
crossterm = { workspace = true }
ctor = "0.6.3"
dep-graph = "0.2.0"
dialoguer = { workspace = true }
directories = { workspace = true }
env_logger = { workspace = true }
expectrl = { workspace = true }
futures-util = { workspace = true }
gag = "1.0.0"
git2 = { workspace = true }
#gnostr-crawler = "1906.925289.572444"
grcov = "0.10.5"
mockall = "0.11.4"
nostr-sdk_0_34_0 = { package = "nostr-sdk", version = "0.34.0" } # Kept for now, will remove later
nostr_0_34_1 = { package = "nostr", version = "0.34.1" } # Kept for now, will remove later
once_cell = { workspace = true }
predicates = { workspace = true }
pretty_assertions = "1.4.1"
quinn = { version = "0.11.9", default-features = false }
rand = "0.8.5"
reqwest = { workspace = true, features = ["json"] }
serial_test = "2.0.0"
signal-child = "1.0.6"
strip-ansi-escapes = { workspace = true }
structopt = "0.3.26"
temp-env = "0.3.6"
tempfile = { workspace = true }
thiserror = { workspace = true }
tmux_interface = "0.3.2"
tokio-tungstenite = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
# other patches

# # The profile that 'dist' will build with
# [profile.dist]
# inherits = "release"
# lto = "thin"


# Optimized for development speed
[profile.dev]
# 0 = no optimizations (fastest build), 1 = basic (good balance)
opt-level = 0 

# Reduce debug info: 0 = none, 1 = line tables only, 2 = full
# Setting this to 1 significantly speeds up the linking stage.
debug = 1

# Enable "Incremental" compilation (usually on by default)
incremental = true

# Use a faster linker if your OS supports it (lld or mold)
# This is often set in .cargo/config.toml, but impacts build speed here.

# --- Optimized for faster Check/Build across dependencies ---
[profile.dev.package."*"]
# Keeping dependencies slightly optimized can actually speed up 
# overall build times if your code calls them heavily.
opt-level = 0
