[package]
name = "gnostr-app"
version = "0.0.1"
description = "gnostr-app:a git+nostr workflow utility."
keywords = ["nostr", "nostr-relay", "git"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

# [features]
# zstd = ["nostr-db/zstd"]

[workspace]

members = ["db", "db/bench", "extensions", "kv", "kv/bench", "relay"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/gnostr-org/gnostr"
repository = "https://github.com/gnostr-org/gnostr.git"
authors = ["gnostr <admin@gnost.org>", "Arron zhang <arronzhang@me.com>"]

[[bin]]
path = "src/main.rs"
name = "gnostr-app"

[dependencies]
actix-rt = "2.10.0"
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
dirs = "5.0.1"

gnostr = { version = "*", path = ".." }
gpui = { git = "https://github.com/zed-industries/zed" }
indicatif = "0.17.8"
nostr-db = { version = "0.4.5", path = "./db", features = ["search"] }
nostr-extensions = { version = "0.4.8", path = "./extensions" }
nostr-relay = { version = "0.4.8", path = "./relay", features = ["search"] }
rayon = "1.10.0"
simplelog = { version = "0.12", default-features = false }

#smallvec = "1.13.2"
thiserror = "1.0.63"
tracing = { version = "0.1.38", default-features = false }
tracing-core = "0.1.33"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }

unicode-segmentation = "1.12.0"
