[package]
name = "asyncgit"
version = "0.24.3"
authors = ["extrawurst <mail@rusticorn.com>"]
edition = "2021"
description = "allow using git2 in a asynchronous context"
homepage = "https://github.com/extrawurst/gitui"
repository = "https://github.com/extrawurst/gitui"
readme = "README.md"
license = "MIT"
categories = ["concurrency", "asynchronous"]
keywords = ["git"]

[dependencies]
bitflags = "1"
crossbeam-channel = "0.5"
easy-cast = "0.5"
fuzzy-matcher = "0.3"
git2 = "0.17"
git2-hooks = { path = "../git2-hooks", version = "0.3" }
log = "0.4"
# git2 = { path = "../../extern/git2-rs", features = ["vendored-openssl"]}
# git2 = { git="https://github.com/extrawurst/git2-rs.git", rev="fc13dcc", features = ["vendored-openssl"]}
# pinning to vendored openssl, using the git2 feature this gets lost with new resolver
openssl-sys = { version = '0.9', features = ["vendored"], optional = true }
bech32 = { version = "0.11", optional = true }
futures-util = { version = "0.3", optional = true }
hex = { version = "0.4", optional = true }
rayon = "1.8"
rayon-core = "1.11"
scopetime = { path = "../scopetime", version = "0.1" }
secp256k1 = { version = "0.29", features = ["rand-std", "global-context"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true }
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"], optional = true }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"], optional = true }
unicode-truncate = "0.2.0"
url = "2.5"

[dev-dependencies]
env_logger = "0.10"
invalidstring = { path = "../invalidstring", version = "0.1" }
pretty_assertions = "1.4"
serial_test = "1.0"
tempfile = "3.4"

[features]
default = ["trace-libgit"]
trace-libgit = []
vendor-openssl = ["openssl-sys"]
nostr = ["dep:secp256k1", "dep:bech32", "dep:sha2", "dep:hex", "dep:serde_json", "dep:tokio", "dep:tokio-tungstenite", "dep:futures-util"]
