[package]
name = "gnostr-bins"
edition = "2024"
version.workspace = true
description = "gnostr bins and bundled workflow binaries"
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/gnostr-org/gnostr"
repository = "https://github.com/gnostr-org/gnostr.git"
exclude.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["blossom", "blossom-tui"]
blossom = []
blossom-tui = ["dep:blossom_tui"]
metrics = []
rate_limiter = []
vendor-openssl = ["gnostr-asyncgit/vendor-openssl", "git2/vendored-openssl"]
vendored-openssl = ["vendor-openssl"]

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
async-std = { version = "1.12", features = ["attributes"] }
axum = { workspace = true }
blossom_tui = { workspace = true, optional = true }
chrono = "0.4"
clap = { workspace = true }
const_format = "0.2"
crossterm = "0.29"
env_logger = "0.11"
futures = { workspace = true }
futures-util = { workspace = true }
git-version = "0.3.9"
git2 = { version = "0.20.4", default-features = false }
gnostr = { path = "..", version = ">=948233.1875.173496" }
gnostr-asyncgit = { package = "gnostr-asyncgit", path = "../asyncgit", features = [
  "tui",
  "vendor-openssl",
], version = ">=948233.1875.173496" }
gnostr-chat = { package = "gnostr-chat", path = "../chat", version = ">=948233.1875.173496" }
gnostr-crawler = { package = "gnostr-crawler", path = "../crawler", version = ">=948233.1875.173496" }
gnostr-extensions = { package = "gnostr-extensions", path = "../relay/extensions", version = ">=948233.1875.173496" }
gnostr-git-helpers = { package = "gnostr-git-helpers", path = "../git-helpers", version = ">=948233.1875.173496" }
gnostr-js = { package = "gnostr-js", path = "../js", version = ">=948233.1875.173496" }
gnostr-legit = { package = "gnostr-legit", path = "../legit", version = ">=948233.1875.173496" }
gnostr-p2p = { package = "gnostr-p2p", path = "../p2p", version = ">=948233.1875.173496" }
gnostr-relay = { package = "gnostr-relay", path = "../relay", version = ">=948233.1875.173496" }
gnostr-web = { package = "gnostr-web", path = "../web", version = ">=948233.1875.173496" }
gnostr_filetreelist = { package = "gnostr-filetreelist", path = "../filetreelist", version = ">=948233.1875.173496" }
gnostr_qr = { path = "../qr", version = ">=948233.1875.173496" }
libp2p = { workspace = true }
log = { workspace = true }
ngit = { package = "gnostr-ngit", path = "../ngit", version = ">=948233.1875.173496" }
nips = { path = "../nips", version = ">=948233.1875.173496" }
nostr = { workspace = true }
pretty_env_logger = "0.5.0"
proctitle = "0.1.1"
ratatui = { workspace = true, default-features = false, features = [
  "crossterm",
] }
regex = { workspace = true }
reqwest = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serial_test = "2.0.0"
sha2 = { workspace = true }
sha256 = "1.6.0"
simple_logger = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.18"
toml = { workspace = true }
tower-http = { workspace = true }
tower-layer = { workspace = true }
tracing = { workspace = true }
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true }
tui-input = "0.14.0"
url = { workspace = true }
walkdir = { workspace = true }
warp = "0.3"
webbrowser = "0.8"
